# gram

./: .gitignore  CMakeLists.txt  TODO.md
include/: gram.h  gram_csv.h  loadfns.h  main.h
lua_demos/: ceny.csv  ceny.lua  fibonacci.lua  gauss.lua  solow.lua  trig.lua
src/: gram_csv.c  gram_csv_lib.c  gram_update.c  loadfns.c  main.c
